--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B7C8361DYT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-B7C8361DYT');
+    </script>
+    <script data-ad-client="ca-pub-9069268541631874" async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Interstellar (Solana Wormhole VAA restorer)</title>
   </head>
   <body>
